fixed footer spacing

--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -68,6 +68,9 @@ form > footer.navbar-default
   height:20px !important
   padding-top:5px !important
   text-align:center
+
+.myfooterspacer
+  height:50px;
   
 @media screen and (max-width: 767px)
   .navbar-nav
@@ -79,3 +82,6 @@ form > footer.navbar-default
     
   form > footer.navbar-default
     margin-bottom:0px
+  
+  .myfooterspacer
+    height:0px;
